26) kernel: mm/page_alloc: add unlikely macro to help compiler optimization.<br>
27) kernel: mm/mempolicy: remove per-process flag.<br>
28) kernel: ppp: build ppp* as static (sligth optimize performance, small increase ram usage).<br>
29) kernel: enchane sections speed hack(fastpathsys ~2% cpu free).<br>
30) kernel: ipv4: Make IP_MULTICAST_ALL and IP_MSFILTER work on raw sockets.<br>
31) kernel: apply optimize_mips_memcpy_memset_cache.<br>
32) kernel: ralink spi: allow set FAST/DOR/DIOR from kernel config, support DOR on Macronix chips.<br>
33) kernel: bridge: fix netfilter/NF_BR_LOCAL_OUT for own, locally generated queries.<br>
34) kernel: bridge: send query as soon as leave is received.<br>
35) kernel: bridge: multicast: enable snooping on general queries only.<br>
36) kernel: bridge: multicast: allow leave and fast_leave for M2U records.<br>
37) kernel: disable IPv6 offload for SDRAM memory devices (4Mb FLASH samples).<br>
<br>
<br>
<b>1.3.x</b><br>
1) toolchain: sync with 4.8.4 gcc svn version (after 4.8.3 release 4.8 tree apply only bugfixes).<br>
2) toolchain: kernel headers up 02.12.2014.<br>
3) toolchain: rebuild for 32bit hosts (need for prebuildede build compat).<br>
4) miniupnpd: up to 1.9.20141204 version.<br>
5) xl2tpd: up to Nov 26, 2014 git version.<br>
6) kernel: update to 3.4.105.<br>
7) kernel: pppoe: missed check for destination addr in PADT frame processing.<br>
8) kernel: ralink_wifi: update to 2.7.2.0/2.6.2.0 (20140820) AP/STA drivers.<br>
9) kernel: net: core: Remove redundant call to nf_reset in dev_forward_skb.<br>
10) kernel: net: skbuff: reduce struct size if nf_trace disable.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>