@@ -601,7 +601,7 @@ EXPORT_SYMBOL(kfree_skb);
  *	Functions identically to kfree_skb, but kfree_skb assumes that the frame
  *	is being dropped after a failure and notes that
  */
-void consume_skb(struct sk_buff *skb)
+void __fastpathnet consume_skb(struct sk_buff *skb)
 {
 	if (unlikely(!skb))
 		return;
@@ -614,6 +614,7 @@ void consume_skb(struct sk_buff *skb)
 }
 EXPORT_SYMBOL(consume_skb);
 
+#ifdef SKB_RECYCLE_SUPPORT
 /**
  * 	skb_recycle - clean up an skb for reuse
  * 	@skb: buffer
@@ -659,6 +660,7 @@ bool skb_recycle_check(struct sk_buff *skb, int skb_size)
 	return true;
 }
 EXPORT_SYMBOL(skb_recycle_check);
+#endif
 
 static void __copy_skb_header(struct sk_buff *new, const struct sk_buff *old)
 {
