@@ -373,6 +373,8 @@
 8) kernel: ralink_wifi: update to 2.7.2.0/2.6.2.0 (20140820) AP/STA drivers.<br>
 9) kernel: net: core: Remove redundant call to nf_reset in dev_forward_skb.<br>
 10) kernel: net: skbuff: reduce struct size if nf_trace disable.<br>
+11) kernel: net: skbuff: move consume_skb to faspath section.<br>
+12) kernel: net: exclude skb_recycle code from real build, small codesize reduce.<br>
 <br>
 <br>
 <b>TODO:</b><br>
